# EvoHaskell

./: build-csf  dist.cabal  phylo.cabal
src/: Alignment.hs  AlnDist.hs  AlnDistSet.hs  CalcLkl.hs  Dist.hs  HomDist.hs  PhyDist.hs  SMap.hs  SeqCat.hs  Tree.hs  testOpt.hs
src/Alignment/: .Dist.hs.swp  Dist.hs  DistSet.hs  Test.hs
src/Phylo/: Alignment.hs  Data.hs  Likelihood.hs  Matrix.hs  NLOpt.hs  NeXML.hs  OpenBLAS.hs  Opt.hs  OptOutput.hs  PhyloXML.hs  Tree.hs  nlopt_c.c  nlopt_c.h
src/Phylo/Alignment/: Parsers.hs
src/Phylo/Graphics/: Plotting.hs
