Name:           MSAMetric
Version:        0.1
Cabal-Version:  >= 1.2
License:        BSD3
Author:         Benjamin Blackburne
Build-Type:     Simple

--Executable dist
 --       Main-Is: Dist.hs
 --       HS-Source-Dirs: src
--Executable homdist
--        Main-Is: HomDist.hs
--       HS-Source-Dirs: src
Executable treedist
        Main-Is: PhyDist.hs
        HS-Source-Dirs: src
library
        Exposed-Modules: Alignment, Alignment.Dist, Tree
        HS-Source-Dirs: src
        Build-Depends: hashmap >= 1.1.0, bytestring >= 0.9.0.0, parsec >= 2.1.0, mtl >= 1.1.0.2, base >= 3
