Name:           phylkl
Version:        0.2
Cabal-Version:  >= 1.2
License:        BSD3
Author:         Benjamin Blackburne
Build-Type:     Simple



--Executable dist
 --       Main-Is: Dist.hs
 --       HS-Source-Dirs: src
--Executable homdist
--        Main-Is: HomDist.hs
--       HS-Source-Dirs: src


--Executable seqcat
--        Main-Is: SeqCat.hs
--        HS-Source-Dirs: src
Executable calclkl
        C-sources: src/Phylo/nlopt_c.c
        Extensions: ForeignFunctionInterface
        Main-Is: CalcLkl.hs
        HS-Source-Dirs: src
--Executable testopt
--        C-sources: src/Phylo/nlopt_c.c
--        Main-Is: testOpt.hs
--        HS-Source-Dirs: src
Executable smap
        Extensions: ForeignFunctionInterface, CPP
        C-sources: src/Phylo/nlopt_c.c
        --cpp-options: -DDEBUG
        Main-Is: SMap.hs
        HS-Source-Dirs: src
        ghc-options:     -threaded  -O2 -rtsopts
        ---prof  -fprof-auto 
        ---fprof-cafs
        -- -threaded -with-rtsopts=-A20m -with-rtsopts=-M2000m
        extra-libraries: nlopt 
        if os(OSX)
                frameworks: Accelerate
                ghc-options: -fllvm
library
        C-sources: src/Phylo/nlopt_c.c
        Extensions: ForeignFunctionInterface, CPP
        Exposed-Modules: Phylo.Opt, Phylo.Data, Phylo.Matrix, Phylo.Likelihood, Phylo.NLOpt, Phylo.PhyloXML, Phylo.NeXML, Phylo.Graphics.Plotting, Phylo.OpenBLAS
        HS-Source-Dirs: src
        Includes: nlopt.h
        Build-Depends: base >=4.0.0.0, gsl-one-dimensional-minimization, bindings-gsl>=0.2,roots, time, deepseq, data-accessor, colour,Chart, statistics, vector, hashable,stochmap >= 0.6, unix>=2.4.0.0, random>=1.0, phytree>=0.4.2, json>=0.4, parallel>=3.2.0.2, hmatrix-gsl-stats>=0.1.2.9, statistics>=0.8.0.5, hmatrix >= 0.11.0.4, bytestring >= 0.9.0.0, parsec >= 2.1.0 && < 3.0.0, mtl >= 1.1.0.2, hashmap >= 1.1.0, QuickCheck>=2.4.0.1, containers >= 0.3.0.0, terminal-progress-bar, temporary, filepath, binary, json, Unixutils, timsort, process
        Build-tools:         hsc2hs
        ghc-options:        -O2
        if os(OSX)
                frameworks: Accelerate
                ghc-options: -fllvm
               
